--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,6 +20,7 @@
         <module>../chapter2-initializer</module>
         <module>../chapter2-initializer-haha</module>
         <module>../chapter2-springmvc</module>
+        <module>../chapter3</module>
         <module>../chapter4</module>
         <module>../chapter4-resource</module>
     </modules>
@@ -35,6 +36,7 @@
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.2</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
