--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 
     <modules>
         <module>parent</module>
+        <module>chapter5</module>
+        <module>core</module>
+        <module>chapter5-aa</module>
     </modules>
 
     <dependencies>
